# ucc

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cc/: cc.h  expressions.h  function.cpp  function.h  grammar.y  main.cpp  parser.cpp  parser.h  statement.cpp  statement.h  tokens.l
cc/ast/: expression.h  expressions.h  function.cpp  function.h  literals.cpp  literals.h  object.cpp  object.h  statement.cpp  statement.h  type.cpp  type.h  variables.cpp  variables.h  visitor.h
cc/codegen/: code_generator.cpp  code_generator.h  generator.cpp  generator.h
cc/typesys/: type.cpp  type.h  typemap.cpp  typemap.h
driver/: main.cpp
examples/: simple_functions.c  simple_program.c
prep/: prep.cpp  prep.h
tests/: CMakeLists.txt  prep_tests.sh
tests/cc/: 01_functions.c  01_simple_functions.c  02_funcs_with_args.c  03_expr.c  function_call.c  function_call.ir  simple_functions.c  simple_functions.ir
ucc/: grammar.y  main.cpp  tokens.l
